# selfie_carolocup2019

./: .gitignore  .gitmodules  README.md
src/image_proc_fisheye/: nodelet_plugins_.xml
src/image_proc_fisheye/launch/: image_proc_crop.launch
src/path_planner/: CMakeLists.txt  README.md  package.xml
src/path_planner/src/: main_node.cpp  polyfit.cpp
src/selfie/: CMakeLists.txt  package.xml
src/selfie/interfaces/: DynamicEvent.yaml
src/selfie/launch/: initialization.launch
src/selfie/providers/: scenario_1.yaml  scenario_2.yaml
src/selfie/scripts/: initialization  pass_control  reset_vision
src/selfie_camera/: CMakeLists.txt  package.xml
src/selfie_camera/config/: basler_config.yaml  homography_fisheye_01.yaml  homography_fisheye_01_3.yaml  homography_fisheye_01_4.yaml
src/selfie_camera/launch/: basler.launch  image_proc_crop.launch
src/selfie_camera/scripts/: define_roi
src/selfie_control/: CMakeLists.txt  package.xml
src/selfie_control/action/: ChangeLane.action
src/selfie_control/cfg/: AngularCoeff.cfg  HeadingCoeff.cfg  Speed.cfg
src/selfie_control/include/selfie_control/: intersections.h  speed_control.h
src/selfie_control/launch/: pid-tuning.launch
src/selfie_control/scripts/: angle_to_ackermann.py  cmd_converter.py  min_float64.py  offset_combiner.py  pid_tuner.py
src/selfie_control/src/: ChangeLane.cpp  ChangeLane.h  README.md  change_lane.cpp  demo_change_lane.cpp  demo_position.cpp  intersections.cpp  speed_control.cpp
src/selfie_ids_handler/: CMakeLists.txt  README.md  package.xml
src/selfie_ids_handler/src/: ids.cpp  ids.h  ids.hpp  main_frame_receiver.cpp  main_ids.cpp
src/selfie_launch/: CMakeLists.txt  package.xml
src/selfie_launch/launch/: drive.launch  (+2 more)
src/selfie_logic/: CMakeLists.txt  README.md  package.xml
src/selfie_msgs/: CMakeLists.txt  package.xml
src/selfie_obstacle_detection/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/selfie_obstacle_detection/src/nodelets/: remove_background.cpp
src/selfie_park/: CMakeLists.txt
src/selfie_parking/: CMakeLists.txt  CMakeLists_BACKUP_25390.txt  CMakeLists_LOCAL_25390.txt  CMakeLists_REMOTE_25390.txt  package.xml  vscode_includepaths
src/selfie_path_planner/: CMakeLists.txt  README.md  package.xml
src/selfie_perception/: CMakeLists.txt  package.xml
src/selfie_rviz/: CMakeLists.txt  plugin_description.xml
src/selfie_starting_procedure/: CMakeLists.txt  README.md  package.xml
src/selfie_stm32_bridge/: CMakeLists.txt  README.md  package.xml
(+76 files in other folders)
