<?xml version="1.0"?>
<package format="2">
  <name>selfie_obstacle_detection</name>
  <version>0.0.0</version>
  <description>The selfie_obstacle_detection package</description>
  <maintainer email="gotlib.adam@gmail.com">Adam Gotlib</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
